--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div id="fb-root"></div>
+    <!-- <div id="fb-root"></div>
     <script
       async
       defer
@@ -63,9 +63,9 @@
     <script
       type="text/javascript"
       src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58436e2a881f4e5a"
-    ></script>
+    ></script> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-48215481-21"
     ></script>
@@ -87,6 +87,6 @@
       src="https://contextual.media.net/dmedianet.js?cid=8CUR14JKF"
       async="async"
     ></script>
-    <script src="https://www.powr.io/powr.js?platform=embed"></script>
+    <script src="https://www.powr.io/powr.js?platform=embed"></script> -->
   </body>
 </html>
