--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,21 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Free lucky draw online tool that makes random drawing winners much easier. Randomizing a winner is now easier than ever! Random picker, raffle, draw, contest."
+      content="Big C makes random drawing winners much easier. Randomizing a winner is now easier than ever! Random picker, raffle, draw, contest."
     />
-    <meta name="keywords" content="lucky,draw,random,picker,raffle" />
-    <meta name="author" content="Jason Kam" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="keywords" content="Big C, lucky,draw,random,picker,raffle" />
+    <meta name="author" content="Big C" />
+    <link rel="shortcut icon" href="https://www.bigc.co.th/favicon_bigc.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta property="og:title" content="Lucky Draw - Lucky Draw Simulator" />
+    <meta property="og:title" content="Big C Lucky" />
     <meta
       property="og:description"
-      content="Free lucky draw online tool that makes random drawing winners much easier. Randomizing a winner is now easier than ever! Random picker, raffle, draw, contest."
+      content="Big C makes random winners much easier. Randomizing a winner is now easier than ever! Random picker, raffle, draw, contest."
     />
-    <meta
-      property="og:image"
-      content="https://luckydraw.me/images/luckydraw-share.png"
-    />
-    <meta property="og:url" content="https://luckydraw.me" />
+
+    <meta property="og:url" content="https://www.bigc.co.th" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -37,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Lucky Draw - Lucky Draw Simulator</title>
+    <title>Big C - Lucky</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
